--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Fork, Clone & Enjoy.
+title: Wlsellfe Joon Tech Blog
 description: Minimalistic Jekyll theme for your blog with plenty of features. Easy to install and setup.
 ---
 
